--- a/project.html
+++ b/project.html
@@ -40,8 +40,8 @@
               <h3 class="card-title">Shoe Website</h3>
               <p>I built this one to exercise my creativity and gain an understanding of how to create a responsive and visually appealing website, as well as how to design an aesthetically pleasing website that will entice visitors.
               </p>
-              <a href="https://github.com/markdlrosario3/shoe-website" target="_blank" class="btn btn-dark w-100">View Code</a>
-              <a href="https://markdlrosario3.github.io/shoe-website/" target="_blank" class="btn btn-dark w-100">View Website</a>
+              <a href="https://github.com/markdlrosario3/Shoe-website" target="_blank" class="btn btn-dark w-100">View Code</a>
+              <a href="https://markdlrosario3.github.io/Shoe-website/" target="_blank" class="btn btn-dark w-100">View Website</a>
             </div>
           </div>
         </div>
