--- a/project.html
+++ b/project.html
@@ -24,8 +24,8 @@
               <p>When it comes to freelancers (or businesses), portfolio websites are an extension of their résumé. In addition to providing potential clients with a handy way to showcase your work, it also allows you to improve on your talents and services.
               <br>
               </p>
-              <a href="https://github.com/markdlrosario3/My-Portfolio-Website" target="_blank" class="btn btn-dark w-100">View Code</a>
-              <a href="#" target="_blank" class="btn btn-dark w-100">View Website</a>
+              <a href="https://github.com/markdlrosario3/Portfolio" target="_blank" class="btn btn-dark w-100">View Code</a>
+              <a href="https://markdlrosario3.github.io/Portfolio/" target="_blank" class="btn btn-dark w-100">View Website</a>
             </div>
           </div>
         </div>
